Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0
-
None
-
Ubuntu 20.04
-
b5ff180f8c7a48196fdbcb0ff0db4dcfd5842585 (qt-creator/qt-creator/master)
Description
Hitting Ctrl+B or Ctrl+Shift+B will save files before building (since I have "Save all files before build" enabled). However, Build > Build for Run Configuration does not.
Qt Creator 4.14.0 Based on Qt 5.15.2 (GCC 7.3.1 20180303 (Red Hat 7.3.1-5), 64 bit) Built on Dec 17 2020 07:57:09 From revision 909f74dc56
Attachments
Issue Links
- relates to
-
QTCREATORBUG-24562 The 'Build File "<current-file-name>"' action doesn't respect the "Save all files before build" setting
- Closed